# situation-monitor

./: .gitignore  README.md  SPEC.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/static/: app.js
app/templates/: index.html
app/templates/partials/: cyber.html  incident_detail.html  incidents.html  settings.html  source_health.html  timeline.html
cluster/: __init__.py  clusterer.py
feeds/: global.yaml
geo/: __init__.py  airports.py  coords_extract.py  gazetteer.py
health/: __init__.py  health.py
implementation/: phase-1-foundation-mvp.md  phase-2-beta-expansion.md  phase-3-advanced-hardening.md
ingest/: feed_packs.py  fetch.py  scheduler.py
ingest/parsers/: __init__.py  atom.py  cap.py  csv.py  faa.py  geojson.py  govuk.py  json.py  rss.py  xml.py
normalize/: __init__.py  normalize.py
realtime/: __init__.py  bus.py  sse.py
scripts/: db_backup.py  db_restore.py  download_airports.py
store/: __init__.py  db.py
tests/: test_cluster_utils.py  test_gazetteer.py  test_parsers.py
tests/fixtures/: nhc.xml  nws_alerts.geojson  sample.rss.xml  usgs.geojson
